--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 g._v="1.3.0";
             })(window,document,window['_fs_namespace'],'script','user');
         </script>
-        <script src="/js/app.js?id=4be3cde62c67cf7cf0ee" defer></script>
+        <script src="/website/js/app.js?id=4be3cde62c67cf7cf0ee" defer></script>
 
         <title>Subdeeply | Home</title>
 
@@ -70,7 +70,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap"  rel="stylesheet"/>
 
         <!-- Styles -->
-        <link href="/css/app.css?id=0e0179778a8232bf17f2" rel="stylesheet">
+        <link href="/website/css/app.css?id=0e0179778a8232bf17f2" rel="stylesheet">
     </head>
     <body class="preload">
         <div id="app">
