--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
         <title>Subdeeply | Home</title>
 
         <meta name="title" content="Subdeeply | Home">
-        <meta name="description" content="This is a default description">
+        <meta name="description" content="Educational content on EOS in multi-format. Audio, video and reading. information in #DeFi, #Metaverse, guides, articles and much more that anyone can read, listen or watch.">
 
         <meta property="og:locale" content="en_US">
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="subdeeply.com">
         <meta property="og:title" content="Subdeeply | Home">
         <meta property="og:url" content="https://subdeeply.com">
-        <meta property="og:image" content="https://zecoda.nyc3.digitaloceanspaces.com/makers/assets/makers-meta-image.svg">
-        <meta property="og:description" content="This is a default description">
+        <meta property="og:image" content="https://raw.githubusercontent.com/subdeeply/website/main/img/EOS%20_Subdeeply.png">
+        <meta property="og:description" content="Educational content on EOS in multi-format. Audio, video and reading. information in #DeFi, #Metaverse, guides, articles and much more that anyone can read, listen or watch.">
 
         <meta name="twitter:title" content="Subdeeply | Home">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:image" content="https://zecoda.nyc3.digitaloceanspaces.com/makers/assets/makers-meta-image.svg">
-        <meta name="twitter:description" content="This is a default description">
+        <meta name="twitter:image" content="https://raw.githubusercontent.com/subdeeply/website/main/img/EOS%20_Subdeeply.png">
+        <meta name="twitter:description" content="Educational content on EOS in multi-format. Audio, video and reading. information in #DeFi, #Metaverse, guides, articles and much more that anyone can read, listen or watch.">
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="https://zecoda.nyc3.digitaloceanspaces.com/makers/u/IX1cVdnh1BNGjbDM3pGpZ/favicon/favicon-180x180">
