--- a/podcast.html
+++ b/podcast.html
@@ -1,9 +1,9 @@
 <html class="no-js" lang=""><head>
 		<meta charset="utf-8">
-		<title>This page was built with Figment.so</title>
-		<meta name="description" content="This page was built with Figment.so">
-		<link rel="icon" href="https://figment.so/favicon.ico">
-		<link rel="shortcut icon" href="https://figment.so/favicon.ico">
+		<title>Subdeeply Podcast</title>
+		<meta name="description" content="Rebuilt for simplicity and speed, so you can spend more time discovering and listening to subdeeply podcast.">
+		<link rel="icon" href="/img/subdepply-podcast.ico">
+		<link rel="shortcut icon" href="/img/subdepply-podcast.ico">
 		<style>
 @import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/plus-jakarta-text.min.css");			#world a {text-decoration: none; cursor: pointer;}
 			#world a:hover{opacity: 0.5; text-decoration: underline; cursor: pointer;}
